Added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jonochi.github.io/tanas-portfolio/",
   "name": "tanas-portfolio",
   "version": "0.1.0",
   "private": true,
